<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2005 - 2012 Jaspersoft Corporation. All rights reserved.
    http://www.jaspersoft.com.

    Unless you have purchased a commercial license agreement from Jaspersoft,
    the following license terms apply:

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as
    published by the Free Software Foundation, either version 3 of the
    License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/serverProfile.layout"
    android:orientation="vertical" >

    <!-- Header with breadcrumbs -->
    <include layout="@layout/action_bar"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/serverProfile.scrollView"
        android:fillViewport="true" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/serverProfile.editsContainer.layout"
            android:orientation="vertical" >

            <!-- Profile name -->
            <TextView
                style="@style/label.blue"
                android:text="@string/sp_name_label"
            />
            <EditText
                android:id="@+id/aliasEdit"
                android:hint="@string/sp_name_hint"
                style="@style/editText.singleLine"
            />

            <!-- Server URL -->
            <TextView
                style="@style/label.blue"
                android:text="@string/sp_url_label"
            />
            <EditText
                android:id="@+id/serverUrlEdit"
                android:hint="@string/sp_url_hint"
                style="@style/editText.singleLine"
            />

            <!-- Organization -->
            <TextView
                style="@style/label.blue"
                android:text="@string/sp_org_label"
            />
            <EditText
                style="@style/editText.singleLine"
                android:id="@+id/organizationEdit"
                android:hint="@string/sp_organization_hint"
            />

            <!-- Username -->
            <TextView
                style="@style/label.blue"
                android:text="@string/sp_username_label"
            />
            <EditText
                android:id="@+id/usernameEdit"
                android:hint="@string/sp_username_hint"
                style="@style/editText.singleLine"
            />

            <!-- Password -->
            <TextView
                style="@style/label.blue"
                android:text="@string/sp_password_label"
            />
            <EditText
                android:id="@+id/passwordEdit"
                android:hint="@string/sp_password_hint"
                style="@style/editText.singleLine"
                android:password="true"
            />

            <!-- Save Button -->
            <Button
                android:id="@+id/saveProfileButton"
                style="@style/serverProfile.button"
                android:text="@string/sp_save_btn"
                android:onClick="saveButtonClickHandler"
            />

        </LinearLayout>

    </ScrollView>

</LinearLayout>