<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2005 - 2012 Jaspersoft Corporation. All rights reserved.
    http://www.jaspersoft.com.

    Unless you have purchased a commercial license agreement from Jaspersoft,
    the following license terms apply:

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as
    published by the Free Software Foundation, either version 3 of the
    License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/resourceInfo.layout"
    android:orientation="vertical" >

    <!-- Header with breadcrumbs and action buttons -->
    <include layout="@layout/action_bar"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/resourceInfo.table.layout"
        android:shrinkColumns="1" >

        <!-- Name -->
        <TableRow>
            <TextView
                android:text="@string/ri_name"
                style="@style/resourceInfo.table.name"
            />
            <TextView android:id="@+id/resource_name_info"
                style="@style/resourceInfo.table.info"
            />
        </TableRow>

        <View style="@style/resourceInfo.spacer.short"/>

        <!-- Label -->
        <TableRow>
            <TextView
                android:text="@string/ri_label"
                style="@style/resourceInfo.table.name"
            />
            <TextView android:id="@+id/resourceLabel"
                style="@style/resourceInfo.table.info"
            />
        </TableRow>

        <View style="@style/resourceInfo.spacer.short" />

        <!-- Description -->
        <TableRow>
            <TextView
                android:text="@string/ri_description"
                style="@style/resourceInfo.table.name"
            />
            <TextView android:id="@+id/resourceDescription"
                style="@style/resourceInfo.table.info"
            />
        </TableRow>

        <View style="@style/resourceInfo.spacer.short" />

        <!-- Type -->
        <TableRow>
            <TextView
                android:text="@string/ri_type"
                style="@style/resourceInfo.table.name"
            />
            <TextView android:id="@+id/resourceType"
                style="@style/resourceInfo.table.info"
            />
        </TableRow>

    </TableLayout>

    <!-- Resource properties -->
    <View style="@style/resourceInfo.spacer" />

    <TextView
        android:text="@string/ri_properties"
        style="@style/resourceInfo.propertiesTitle"
    />

    <View style="@style/resourceInfo.spacer" />

    <!-- Resource properties list -->
    <ListView
        android:id="@android:id/list"
        style="@style/list.view"
    />

</LinearLayout>